# InterviewAssistant-Rust

./: .gitignore  Cargo.toml  README.md  build_windows.py  installer.iss  main_windows.py  run.py  run_linux.py
assistant/: __init__.py  ai_client.py  app.py  audio.py  config.py  transcriber.py
linux/: build-deb.py  build-deb.sh  install.sh  interview-assistant_1.0.0_amd64.deb  interview-assistant_1.0.1_amd64.deb  make-deb.sh
src/: app.rs  config.rs  main.rs
src/core/: devices.rs  helpers.rs  mod.rs  single_instance.rs  vosk_ffi.rs  whisper_ffi.rs  whisper_setup.rs
src/services/: ai.rs  audio.rs  hotkeys.rs  mod.rs  transcriber.rs
src/ui/: history_tab.rs  locale.rs  logs_tab.rs  main_tab.rs  mod.rs  settings_tab.rs  theme.rs  widgets.rs
