[package]
name = "interview-assistant"
version = "1.0.0"
edition = "2021"
description = "Offline speech + AI assistant for technical interviews"
authors = ["KatoS"]
rust-version = "1.75"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
cpal = "0.15"
crossbeam-channel = "0.5"
global-hotkey = "0.6"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls", "blocking"] }
zip = "2.2"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
base64 = "0.21"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_Foundation"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
